cilium/external-routes.yaml
# With help from https://crt.the-mori.com/2021-09-17-kubernetes-traefik-forward-traffic-external-ip

# ####### WLED Fireplace Left #######

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: wled-fp-left-external-route
#   namespace: traefik
#   annotations:
#     external-dns.alpha.kubernetes.io/target: k3s.ucdialplans.com
#     kubernetes.io/ingress.class: traefik
# spec:
#   entryPoints:
#   - websecure
#   routes:
#   - match: Host(`wled-fp-left.ucdialplans.com`)
#     kind: Rule
#     services:
#     - name: wled-fp-left-forward
#       kind: Service
#       port: 80
#   tls:
#     options:
#       name: tls-options-clientauth
#       namespace: traefik

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wled-fp-left-external-route
  namespace: cilium
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "wled-fp-left.ucdialplans.com"
  rules:
  - backendRefs:
    - name: wled-fp-left-forward
      namespace: cilium
      kind: Service
      port: 80

---
kind: Service
apiVersion: v1
metadata:
  name: wled-fp-left-forward
  namespace: cilium
spec:
  type: ExternalName
  ports:
  - name: wled-fp-left-forward
    port: 80
    targetPort: 80
  externalName: 192.168.1.55
  selector:
    app.kubernetes.io/instance: cilium
    app.kubernetes.io/name: cilium



# ####### WLED Fireplace Right #######

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: wled-fp-right-external-route
#   namespace: traefik
# spec:
#   entryPoints:
#     - websecure
#   routes:
#   - match: Host(`wled-fp-right.ucdialplans.com`)
#     kind: Rule
#     services:
#     - name: wled-fp-right-forward
#       kind: Service
#       port: 80
#   tls:
#     options:
#       name: tls-options-clientauth
#       namespace: traefik

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wled-fp-right-external-route
  namespace: cilium
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "wled-fp-right.ucdialplans.com"
  rules:
  - backendRefs:
    - name: wled-fp-right-forward
      namespace: cilium
      kind: Service
      port: 80

---
kind: Service
apiVersion: v1
metadata:
  name: wled-fp-right-forward
  namespace: cilium
spec:
  type: ExternalName
  ports:
  - name: wled-fp-right-forward
    port: 80
    targetPort: 80
  externalName: 192.168.1.56
  selector:
    app.kubernetes.io/instance: cilium
    app.kubernetes.io/name: cilium



# ####### Firepit Speakers #######

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: firepit-speakers-external-route
#   namespace: traefik
# spec:
#   entryPoints:
#   - websecure
#   routes:
#   - match: Host(`firepit-speakers.ucdialplans.com`)
#     kind: Rule
#     services:
#     - name: firepit-speakers-forward
#       kind: Service
#       port: 80
#   tls:
#     options:
#       name: tls-options-clientauth
#       namespace: traefik

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firepit-speakers-external-route
  namespace: cilium
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "firepit-speakers.ucdialplans.com"
  rules:
  - backendRefs:
    - name: firepit-speakers-forward
      namespace: cilium
      kind: Service
      port: 80

---
kind: Service
apiVersion: v1
metadata:
  name: firepit-speakers-forward
  namespace: cilium
spec:
  type: ExternalName
  ports:
  - name: firepit-speakers-forward
    port: 80
    targetPort: 80
  externalName: 192.168.1.23
  selector:
    app.kubernetes.io/instance: cilium
    app.kubernetes.io/name: cilium
