cilium/ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: hubble
  namespace: cilium
spec:
  entryPoints: 
  - websecure
  routes:
  - match: Host(`hubble.ucdialplans.com`) 
    kind: Rule
    services:
    - name: hubble-ui
      port: 80
    middlewares:
    - name: traefik-security
      namespace: traefik
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik
